# vlc-browser-plugin

./: Makefile.am  NEWS  configure.ac
activex/: Makefile.am  README.TXT  axvlc.idl  axvlc_rc.rc.in  connectioncontainer.cpp  connectioncontainer.h  dataobject.cpp  main.cpp  objectsafety.cpp  olecontrol.cpp  oleinplaceactiveobject.cpp  oleinplaceobject.cpp  oleobject.cpp  persistpropbag.cpp  persiststorage.cpp  persiststreaminit.cpp  plugin.cpp  plugin.h  provideclassinfo.cpp  supporterrorinfo.cpp  utils.cpp  utils.h  viewobject.cpp  vlccontrol2.cpp  vlccontrol2.h
common/: Makefile.am  vlc_player.cpp  vlc_player.h  vlc_player_options.h  win32_fullscreen.cpp  win32_fullscreen.h  win32_vlcwnd.cpp
share/test/: resize.html  simple.html  windowless.html
share/test/vb2013/: Form1.Designer.vb  Form1.resx  Form1.vb  Sample.sln  Sample.vbproj
share/test/vb2013/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
